--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/43ee7792.main.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link href="http://fonts.googleapis.com/css?family=Allerta" rel="stylesheet" type="text/css">
@@ -45,8 +45,8 @@
       ga('create', 'UA-XXXXX-X');
       ga('send', 'pageview');
     </script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="scripts/modules.js"></script>
-    <script src="scripts/scripts.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
+    <script src="scripts/d41d8cd9.modules.js"></script>
+    <script src="scripts/d37a51f1.scripts.js"></script>
   </body>
 </html>
