--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
     <!-- Add your site or application content here-->
-    <div ng-include="'/views/nav.html'"></div>
-    <div ng-include="'/views/logo.html'"></div>
+    <div ng-include="'views/nav.html'"></div>
+    <div ng-include="'views/logo.html'"></div>
     <div ng-view="" class="container"></div>
-    <div ng-include="'/views/footer.html'"></div>
+    <div ng-include="'views/footer.html'"></div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID-->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
